added login/register/preset views

--- a/SocialNetwork/SocialNetwork.Frontend/social-network/src/app/app.component.html
+++ b/SocialNetwork/SocialNetwork.Frontend/social-network/src/app/app.component.html
@@ -1,2 +1,22 @@
 <h2>Social Network</h2>
 <p>This is Social Network project template</p>
+<nav>
+    <ul>
+        <li>
+            <a routerLink="/login-component" routerLinkActive="active">
+                login view
+            </a>
+        </li>
+        <li>
+            <a routerLink="/register-component" routerLinkActive="active">
+                register view
+            </a>
+        </li>
+        <li>
+            <a routerLink="/password-reset-component" routerLinkActive="active">
+                password reset view
+            </a>
+        </li>
+    </ul>
+</nav>
+<router-outlet></router-outlet>
